--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "^16.11.12",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
+    "clsx": "^1.1.1",
     "eslint": "^8.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
