--- a/package.json
+++ b/package.json
@@ -28,7 +28,11 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+
+    "rn:unix": "mv build build-dev",
+    "clean:unix": "rm -rf build-dev",
+    "build:dev:unix": "npm run build && npm run clean:unix && npm run rn:unix"
   },
   "eslintConfig": {
     "extends": [
