--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "@types/node": "^16.11.12",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
+    "axios": "^0.26.1",
     "clsx": "^1.1.1",
+    "crypto-browserify": "^3.12.0",
+    "crypto-js": "^4.1.1",
     "eslint": "^8.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -23,6 +26,7 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "typescript": "^4.5.4",
+    "use-debounce": "^7.0.1",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
@@ -51,5 +55,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "browser": {
+    "crypto": false
   }
 }
