--- a/nginx.conf
+++ b/nginx.conf
@@ -27,20 +27,34 @@ http {
     server {
             listen       80;
             listen  [::]:80;
-            server_name  localhost;
+            server_name  loopdu.com www.loopdu.com;
             include /etc/nginx/default.d/*.conf;
+
             location / {
-                    alias /var/www/dist/;
-                    try_files $uri $uri/ /index.html;
-
-                    add_header Cache-Control public;
-                    add_header Cache-Control no-store;
-                    add_header Cache-Control no-cache;
-
-                    if_modified_since off;
-                    add_header Last-Modified "";
-                    expires off;
+                return 301 https://$host$request_uri;
             }
+    }
+
+    server {
+        listen 443 ssl http2;
+        listen [::]:443 ssl http2;
+        server_name  loopdu.com www.loopdu.com;
+
+        ssl_certificate /etc/letsencrypt/live/loopdu.com/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/loopdu.com/privkey.pem;
+
+        location / {
+            alias /var/www/dist/;
+            try_files $uri $uri/ /index.html;
+
+            add_header Cache-Control public;
+            add_header Cache-Control no-store;
+            add_header Cache-Control no-cache;
+
+            if_modified_since off;
+            add_header Last-Modified "";
+            expires off;
+        }
     }
 }
 
