--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.6.0",
+    "@mui/icons-material": "^5.11.16",
     "@mui/lab": "^5.0.0-alpha.70",
     "@mui/material": "^5.2.5",
     "@mui/styles": "^5.2.3",
@@ -24,8 +25,10 @@
     "eslint": "^8.5.0",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
+    "react-animated-css": "^1.2.1",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-masonry-css": "^1.0.16",
     "react-redux": "^7.2.8",
     "react-router-dom": "^6.2.1",
     "react-scripts": "^5.0.1",
@@ -43,7 +46,14 @@
     "eject": "react-scripts eject",
     "rn:unix": "mv build build-dev",
     "clean:unix": "rm -rf build-dev",
-    "build:dev:unix": "npm run build --max-old-space-size=512 && npm run clean:unix && npm run rn:unix"
+    "build:dev:unix": "npm run build --max-old-space-size=512 && npm run clean:unix && npm run rn:unix",
+    "format": "npx prettier --write .",
+    "fix": "ng lint --fix",
+    "lint:test": "eslint src/app/*",
+    "lint:fix": "eslint ./src --ext .jsx,.js,.ts,.html, --quiet --fix --ignore-path ./.gitignore",
+    "lint:format": "prettier  --loglevel warn --write \"./**/*.{js,jsx,ts,html,scss,css,md,json}\" ",
+    "lint": "npm run lint:format && npm run lint:fix",
+    "prepare-husky": "husky install"
   },
   "eslintConfig": {
     "extends": [
@@ -67,6 +77,24 @@
     "crypto": false
   },
   "devDependencies": {
-    "ajv": "^8.12.0"
+    "@types/imagesloaded": "^4.1.2",
+    "@types/isotope-layout": "^3.0.9",
+    "ajv": "^8.12.0",
+    "autoprefixer": "^10.4.14",
+    "eslint-config-prettier": "^8.8.0",
+    "husky": "^8.0.3",
+    "lint-staged": "^13.2.2",
+    "postcss": "^8.4.24",
+    "tailwindcss": "^3.3.2"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "src/app/*": [
+      "npm run lint"
+    ]
   }
 }
