--- a/package.json
+++ b/package.json
@@ -50,8 +50,8 @@
     "format": "npx prettier --write .",
     "fix": "ng lint --fix",
     "lint:test": "eslint src/app/*",
-    "lint:fix": "eslint ./src --ext .jsx,.js,.ts,.html, --quiet --fix --ignore-path ./.gitignore",
-    "lint:format": "prettier  --loglevel warn --write \"./**/*.{js,jsx,ts,html,scss,css,md,json}\" ",
+    "lint:fix": "eslint ./src --ext .tsx,.jsx,.js,.ts,.html, --quiet --fix --ignore-path ./.gitignore",
+    "lint:format": "prettier  --loglevel warn --write \"./**/*.{js,jsx,tsx,ts,html,scss,css,md,json}\" ",
     "lint": "npm run lint:format && npm run lint:fix",
     "prepare-husky": "husky install"
   },
